Fix overlapping notes floor calculation

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+    --primary-color: #1976d214;
+    --hover-color: #3877b53b
+}
+
 @layer components {
 
     .input-container {
@@ -37,11 +42,11 @@
     }
 
     .history-container {
-        @apply bg-[#1976d214] flex flex-col justify-center w-full items-center hover:bg-[#3877b53b] cursor-pointer
+        @apply -bg--primary-color flex flex-col justify-center w-full items-center hover:-bg--hover-color cursor-pointer
     }
 
     .graph-type-container {
-        @apply bg-[#1976d214] self-stretch flex flex-col justify-center gap-3 h-32 rounded-[50px] pl-16 items-start
+        @apply -bg--primary-color self-stretch flex flex-col justify-center gap-3 h-32 rounded-[50px] pl-16 items-start
     }
 
     .type-button {
